<resources>
    <string name="app_name">Math Quiz Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="profile_information">Profile Information</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="game_mode">Game Mode</string>
    <string name="x">X</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="number_of_wrong">Number of wrong</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="result">Result</string>
    <string name="totol_number_of_round">Totol number of Round</string>
    <string name="go_home">Go Home</string>
    <string name="tap_to_back">Tap to back</string>
    <string name="join_or_create_new">Join or create new</string>
    <string name="room_id">Room id</string>
    <string name="setting">Settings</string>
    <string name="music">Music</string>
    <string name="sound_fx">Sound fx</string>
    <string name="touch_sound">Touch Sound</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="default_mode_get_os_theme">default Mode (get OS theme)</string>
    <string name="light_mode">Light Mode</string>
    <string name="close">close</string>
</resources>