<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainBackgroundColor"
    tools:context=".Fragment.GameOverScreenFragment">
    <ImageView
        android:text="@string/result"
        android:id="@+id/back"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="@dimen/_35ssp"
        android:scaleType="fitXY"
        android:minWidth="@dimen/_40sdp"
        android:minHeight="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tap_to_back" />
    <TextView
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="@dimen/_35ssp"
        android:layout_margin="@dimen/_15sdp"
        android:textColor="@color/red_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:text="@string/result"
        android:id="@+id/share"
        android:src="@drawable/baseline_share_24"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:textSize="@dimen/_35ssp"
        android:scaleType="fitXY"
        android:minWidth="@dimen/_40sdp"
        android:minHeight="@dimen/_40sdp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tap_to_back" />
    <RelativeLayout
        android:id="@+id/cent"
        android:layout_below="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20ssp"
            android:text="@string/totol_number_of_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/round"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20ssp"
            android:text="17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20ssp"
            android:layout_below="@id/round"
            android:text="Totol Number of Wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/Wrong"
            android:layout_below="@id/round"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_20ssp"
            android:text="17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button
        android:textSize="@dimen/_25ssp"
        android:text="@string/go_home"
        android:id="@+id/goHome"
        android:layout_margin="@dimen/_25sdp"
        android:layout_below="@id/cent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>